# DesignPatterns

./: .gitignore  README.md
01.Strategy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01.Strategy/DuckClass/: Duck.h
01.Strategy/FlyBehaviorInterface/: FlyBehavior.c  FlyBehavior.h  FlyNoWay.c  FlyWithWings.h
01.Strategy/QuackBehaviorInterface/: MuteQuack.h  Quack.h  QuackBehavior.c  QuackBehavior.h
02.Observer/: CMakeCache.txt  CMakeLists.txt  Makefile
02.Observer/Common/LinkedList/: linkedList.c
03.Decorator_coffee/: CMakeCache.txt  CMakeLists.txt  Makefile  StarbucksCoffee  beverage.c  beverage.h  blend.c  blend.h  cmake_install.cmake  condiment_decorator.c  condiment_decorator.h  main.c
03.Decorator_pizza/: CMakeLists.txt  cheese_pizza.c  cheese_pizza.h  main.c  pepperoni_pizza.c  pepperoni_pizza.h  pizza.c  pizza.h
04.Factory/AbstractFactory/: CMakeLists.txt  NYPizzaIngredientFactory.c  NYPizzaIngredientFactory.h  NYPizzaStore.c  NYPizzaStore.h  cheesePizza.c  cheesePizza.h  clamPizza.c  clamPizza.h  main.c  pizza.c  pizza.h  pizzaIngredientFactory.h  veggiePizza.c  veggiePizza.h
04.Factory/FactoryMethod/: CMakeLists.txt  ChicagoPizzaStore.c  ChicagoPizzaStore.h  NYPizzaStore.c  NYPizzaStore.h  NYpizzaStore.c  README.md  linkedList.c  linkedList.h  main.c  pizza.c  pizza.h  pizzaStore.c  pizzaStore.h
04.Factory/SimpleFactory/: CMakeLists.txt  README.md  pizza.c  pizza.h  pizzaStore.c  pizzaStore.h  simplePizzaFactory.c  simplePizzaFactory.h
Observer/: CMakeLists.txt  WeatherStation  cmake_install.cmake  main.c
Strategy/: main.c
(+19 files in other folders)
